[package]
name = "slammer"
version = "0.1.0"
authors = ["Ted <ted.pinkerton@mail.utoronto.ca>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "slammer"
harness = false  # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-hal = { version = "0.45" }
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
  "critical-section",
  "embassy-time-driver",
  "embassy-sync",
] }
anyhow = "1.0"
embedded-svc = "0.28"
embedded-hal = "1.0"
heapless = "0.8"
esp-camera-rs = "*"

[patch.crates-io]
esp-camera-rs = { path = "esp-camera-rs" }

[build-dependencies]
embuild = "0.33"
